Repackage project, add core module